syntax = "proto3";

package ai.floedb.floecat.query;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.query.rpc";
option java_outer_classname = "QueryScanProto";

import "common/common.proto";       // ResourceId
import "common/predicate.proto";    // Predicate
import "execution/scan.proto";      // ScanBundle

/**
 * QUERY FILE SCAN SERVICE
 * -----------------------
 * Produces a file-level scan plan for execution engines.
 *
 * Responsibilities:
 *   - projection pruning
 *   - min/max predicate pruning
 *   - combining data + delete files
 *
 * Guarantees:
 *   - Predicate evaluation is conservative (may over-select files)
 *   - Never filters rows
 */
message FetchScanBundleRequest {
  string query_id = 1;

  // The table whose bundle is being fetched.
  ai.floedb.floecat.common.ResourceId table_id = 2;

  // Needed columns; all other column stats are dropped.
  repeated string required_columns = 3;

  // Logical predicates used for file-level pruning.
  repeated ai.floedb.floecat.common.Predicate predicates = 4;
}

message FetchScanBundleResponse {
  ai.floedb.floecat.execution.ScanBundle bundle = 1;
}

service QueryScanService {
  rpc FetchScanBundle(FetchScanBundleRequest)
      returns (FetchScanBundleResponse);
}